--- a/2_assignment-analysis.ipynb
+++ b/2_assignment-analysis.ipynb
@@ -32,8 +32,15 @@
     "\n",
     "## General Process\n",
     "1. Understanding (data, columns, types, domain)\n",
-    "2. Explore (groups, skewness, centrality/spread), re-express if needed\n",
-    "3. Hypothesis: Key assumptions\n",
+    "2. Hypothesis: Key assumptions, questions to self\n",
+    "3. Explore (groups, skewness, centrality/spread), re-express if needed\n",
+    "4. Clean (missing calues, extremes, outliers)\n",
+    "5. Relationship (correlations)\n",
+    "6. Hypothesis Re-iteration (assumption correct? right questions?)\n",
+    "7. Fine tune (keep only relevant plots, make clear and self explanatory)\n",
+    "8. Explain (document thought process, why what has been done)\n",
+    "\n",
+    "<img src=\"./files/EDA_Checklist.png\" alt=\"Checklist\" style=\"width:100px;\"/>\n",
     "\n",
     "## Expected Output\n",
     "1. This jupyter notebook (well documented, essence only), published to GitHub.\n",
