2 or 3 bedrooms examination: conclusions added

--- a/2_assignment-analysis.ipynb
+++ b/2_assignment-analysis.ipynb
@@ -1630,7 +1630,7 @@
    "source": [
     "# Correlation matrix\n",
     "corr_mat = df_fam.corr()\n",
-    "# Show correlations greater than threshold\n",
+    "# Show only correlations greater than threshold (otherwise it has been too crowded)\n",
     "thresh = 0.5\n",
     "corr_filt = corr_mat[abs(corr_mat) >= thresh]\n",
     "\n",
@@ -2372,7 +2372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\">Conclusion: It looks as if it does not makes big difference in general in price, if you choose 2 or 3 bedroom house (Median differs only by 5k). So the clients chooses to go with the 3 bed room house, to be more flexible. We now have to check, if there is an issue between location and 2 or 3 bedrooms...</span>"
+    "<span style=\"color:red\">Conclusion: It looks as if it does not makes big difference in general in price, if you choose 2 or 3 bedroom house (Median differs only by 5k). Also there are much more houses available with 3 bedrooms (~1.8k vs. 11k), so better chance to find one. So the clients chooses to go with the 3 bed room house, to be more flexible. We now have to check, if there is an issue between location and 2 or 3 bedrooms...</span>"
    ]
   },
   {
