Conclusions added, cleaned up

--- a/2_assignment-analysis.ipynb
+++ b/2_assignment-analysis.ipynb
@@ -56,7 +56,7 @@
     "**Give advice to buyer which house to buy and why.**\n",
     "1. Go for a **3 bed house** (more flexible, not necessarily much mor expensive, better market)\n",
     "2. Best market to buy within 1 year is in range **up to 300k**.\n",
-    "3. Top **ZIP Codes** to look after: 98042, 98038, 98023, 98001, 08003\n",
+    "3. Top **ZIP Codes** to look after: 98042, 98038, 98023, 98001, 08003 (good market for those kind of houses)\n",
     "4. Take a look at the map and look for the **orange dots**. These are houses fitting your needs.\n",
     "5. Take a look at the **blue dots** as well, to pick an area that is **most lively** (e.g. 98038, 98042, 98023)\n"
    ]
