--- a/2_assignment-analysis.ipynb
+++ b/2_assignment-analysis.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -731,12 +731,14 @@
        "4  98074  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"Give column better headlines\n",
+    "\"\"\"\n",
     "columns_mapping = {\n",
     "    'id': 'ID',\n",
     "    'date': 'Date_Sold',\n",
@@ -776,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +792,8 @@
     }
    ],
    "source": [
-    "# Converting date / timestamps\n",
+    "\"\"\"Converting dates and time stamps and looking for nan values.\n",
+    "\"\"\"\n",
     "\n",
     "# Checking for null values\n",
     "date_cols = [ 'Date_Sold', 'Yr_Built', 'Yr_Renovated' ]\n",
@@ -813,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +828,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -881,12 +884,14 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\" datatype conversions where meaningfull...\n",
+    "\"\"\"\n",
     "df['Rooms_Bath'] = df['Rooms_Bath'].astype(int)         # no fractions of bathrooms -> int\n",
     "df['Waterfront'] = df['Waterfront'].astype(bool)        # Waterfront can be yes or no -> bool\n",
     "\n",
@@ -910,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -922,6 +927,8 @@
     }
    ],
    "source": [
+    "\"\"\" Checking for duplicates in dataset\n",
+    "\"\"\"\n",
     "dups = df.duplicated().sum()\n",
     "if dups > 0:\n",
     "    print(f\"Number of duplicates found: {dups}\")\n",
@@ -938,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1581,12 +1588,15 @@
        "19      1969            -1  98003  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\" Remove what we do not need to have faster calculations later. Not much to do here. I don't think we need ID, so I drop it.\n",
+    "\"\"\"\n",
+    "\n",
     "# As it is not about those specific houses, we can drop the ID\n",
     "df.drop(['ID'], axis=1, inplace=True)\n",
     "df.head(20)"
@@ -1652,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -1667,6 +1677,9 @@
     }
    ],
    "source": [
+    "\"\"\" A few plots to make a choice on Grade, Price and number of bedrooms.\n",
+    "\"\"\"\n",
+    "\n",
     "fig, ax = plt.subplots(2, 2, figsize=(10,10))\n",
     "\n",
     "ax[0, 0].set_title('Month vs. Price')\n",
@@ -1715,6 +1728,8 @@
     }
    ],
    "source": [
+    "\"\"\" Looking at seasonal effects on price.\n",
+    "\"\"\"\n",
     "# Adding seasons to the data to look for seasonality in price\n",
     "spring = [ 4, 5, 6 ]\n",
     "summer = [ 7, 8, 9 ]\n",
@@ -1758,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1782,7 @@
        "(0.0, 1000000.0)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1783,6 +1798,8 @@
     }
    ],
    "source": [
+    "\"\"\" Checking prices on 2 and 3 bedroom houses.\n",
+    "\"\"\"\n",
     "# Define a function to set font sizes for plot elements\n",
     "def set_font_sizes(ax, title_size=13, label_size=10, tick_label_size=10):\n",
     "    ax.set_title(ax.get_title(), fontsize=title_size)\n",
@@ -2600,7 +2617,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check availability on market"
+    "### Check availability on market\n",
+    "\n",
+    "Better market means potentially better availability to buy within 1 year."
    ]
   },
   {
@@ -2994,10 +3013,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" Plotting an interactive map for the client, so she can zoom in and out and spot areas that are lively\n",
+    "\"\"\"\n",
     "# Creating a map for browser\n",
     "import folium\n",
     "\n",
@@ -3017,6 +3038,7 @@
     "    m.save(name)\n",
     "    # display(m)\n",
     "\n",
+    "# File will be rendered here\n",
     "create_map(grade_7_affordable, 'map_affordable.html')"
    ]
   },
@@ -3033,7 +3055,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Display all data without abbreviation\n",
     "# pd.set_option('display.max_rows', None) \n",
     "\n",
@@ -3240,10 +3261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" Plotting the map with houses \"picked\"\n",
+    "(i.e. fitting criteria of price, size etc) and map them next to the neighborhood (differentiated by color)\n",
+    "\"\"\"\n",
     "m = folium.Map(location=[47.51, -122.26], zoom_start=10)\n",
     "\n",
     "for index, row in top5andall.iterrows():\n",
@@ -3260,7 +3284,16 @@
     "            icon=folium.Icon(color='blue')\n",
     "        ).add_to(m)\n",
     "\n",
+    "# File will be rendered here\n",
     "m.save('map_crowded.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Static render:**\n",
+    "![Static Render](./files/affordableandothers.png)"
    ]
   },
   {
